# langchain-work-repo

./: .env.example  .gitignore  README.md  pyproject.toml  template.json
ChatModels/: huggingface.py
SimilaritySearch/: document_similarity.py
models/ChatModels/: gemini.py
models/EmbeddingModels/: gemini_embedding.py
prompts/: Chatbot.py  chatbot.py  placeholder.py  prompt_generator.py  prompt_ui_dynamic_prompt.py  prompt_ui_static_prompt.py
structured_output/: with_strcutured_output_json.py  with_strcutured_output_pydantic.py  with_strcutured_output_typedict.py
